[package]
name = "pam-auth0"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pam_auth0"
crate-type = ["cdylib"]

[dependencies]
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
libc = "0.2.97"
serde_json = "1.0"