[package]
name = "pam-auth0"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pam_auth0"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pamsm = {version = "0.5.2", features = ["libpam"]}
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
serde_json = "1.0"
slog = "2.7.0"
slog-term = "2.9.0"
slog-async = "2.7.0"